# OpenCV

./: .gitignore
epifanov_k_a/: CMakeLists.txt  build.vs.2019.cmake
epifanov_k_a/prj.labs/: CMakeLists.txt
epifanov_k_a/prj.labs/control_work/: CMakeLists.txt  control_work.cpp  control_work.report.md.in.txt
epifanov_k_a/prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
epifanov_k_a/prj.labs/lab02/: lab02.cpp  lab02.report.md.in.txt
epifanov_k_a/prj.labs/lab03/: lab03.cpp  lab03.report.md.in.txt
epifanov_k_a/prj.labs/lab04/: Kirill_E.json  lab04.cpp  lab04.report.md.in.txt
